[package]
name = "roomor"
version = "0.3.11"
edition = "2021"
authors = ["Roman Chumak <p4ymak@yandex.ru>"]
description = "Minimalistic offline chat over local network."
license = "MIT"
repository = "https://github.com/p4ymak/roomor"
readme = "README.md"
categories = ["network-programming"]
keywords = ["chat", "lan", "offline"]
resolver = "2"
build = "build.rs"

[lints.clippy]
all = "warn"
[env]
CARGO_CFG_TARGET_OS = "android"
[build]
target = "triple"

[dependencies]
eframe = "0.29.1"
human_bytes = "0.4.3"
opener = "0.7.2"
egui-phosphor = "0.7.3"
flume = "0.11.0"
system-interface = "0.27.2"
# network-interface = "2.0.0"

whoami = "1.5.2"
directories = "5.0.1"
chrono = "0.4.38"
timediff = "0.2.3"

enumn = "0.1.14"
crc = "3.2.1"
range_rover = "0.1.2"

log = { version = "0.4", features = ["std"] }


[target.'cfg(not(target_os = "android"))'.dependencies]
env_logger = "0.11.5"
rodio = { version = "0.19.0", default-features = false }
notify-rust = "4"
rfd = "0.15"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = "abort"
strip = "debuginfo"

[package.metadata.bundle]
name = "Roomor"
identifier = "com.p4ymak.roomor"
icon = ["icon/128x128.png"]
version = "0.3.11"
short_description = "Minimalistic offline chat over local network."
long_description = "Minimalistic offline chat with files transmission over local network."
deb_depends = ["libgl1-mesa-glx", "libsdl2-2.0-0 (>= 2.0.5)"]
osx_frameworks = ["SDL2"]

[target.'cfg(windows)'.build-dependencies]
windows_exe_info = "0.4"

[lib]
crate-type = [ "lib" , "cdylib" ]

[target.'cfg(target_os = "android")'.dependencies.android_logger]
version = "0.13"
default-features = false

[target.'cfg(target_os = "android")'.dependencies.eframe]
version = "0.29.1"
default-features = false
features = [
    "glow",
    "android-native-activity",
    "default_fonts",
]

# Used to get same winit used by eframe.
[target.'cfg(target_os = "android")'.dependencies.egui-winit]
version = "0.29.1"
default-features = false
features = [
    "clipboard",
    "links",
]



[package.metadata.android]
package = "org.p4ymak.roomor"
build_targets = [ "aarch64-linux-android" ]
# build_targets = [ "armv7-linux-androideabi", "aarch64-linux-android", "i686-linux-android", "x86_64-linux-android" ]
large_heap = true

# resources = "path/to/resources_folder"
# assets = "path/to/assets_folder"

apk_name = "Roomor"

strip = "default"

# Folder containing extra shared libraries intended to be dynamically loaded at runtime.
# Files matching `libs_folder/${android_abi}/*.so` are added to the apk
# according to the specified build_targets.
# runtime_libs = "path/to/libs_folder"
[package.metadata.android.application]
label = "Roomor"
# theme = "@android:style/Theme.DeviceDefault.ActionBar"

[package.metadata.android.signing.release]
# path = "relative/or/absolute/path/to/my.keystore"
path = "/home/p4ymak/.android/debug.keystore"
keystore_password = "android"


[package.metadata.android.sdk]
min_sdk_version = 20
target_sdk_version = 32
max_sdk_version = 35



[package.metadata.android.application.activity]
config_changes = "orientation|keyboard|keyboardHidden|screenSize"
window_soft_input_mode="stateVisible|adjustResize"
windowSoftInputMode="stateVisible"

[[package.metadata.android.uses_feature]]
name = "android.software.input_methods"
required = true

[[package.metadata.android.uses_feature]]
name = "android.hardware.wifi"
required = true

[[package.metadata.android.uses_feature]]
name = "android.hardware.wifi.direct"
required = true

[[package.metadata.android.uses_permission]]
name="android.permission.ACCESS_WIFI_STATE"
required = true
# max_sdk_version = 35

[[package.metadata.android.uses_permission]]
name="android.permission.ACCESS_NETWORK_STATE"
required = true
# max_sdk_version = 35

[[package.metadata.android.uses_permission]]
name="android.permission.NET_RAW"
required = true
# max_sdk_version = 35

[[package.metadata.android.uses_permission]]
name="android.permission.INTERNET"
required = true
# max_sdk_version = 35

[[package.metadata.android.uses_permission]]
name="android.permission.CHANGE_NETWORK_STATE"
required = true
# max_sdk_version = 35

[[package.metadata.android.uses_permission]]
name="android.permission.CHANGE_WIFI_STATE"
required = true
# max_sdk_version = 35

[[package.metadata.android.uses_permission]]
name="android.permission.CHANGE_WIFI_MULTICAST_STATE"
required = true
# max_sdk_version = 35
