[package]
name = "roomor"
version = "0.4.4"
edition = "2021"
authors = ["Roman Chumak <p4ymak@yandex.ru>"]
description = "Minimalistic offline chat over local network."
license = "MIT"
repository = "https://github.com/p4ymak/roomor"
readme = "README.md"
categories = ["network-programming"]
keywords = ["chat", "lan", "offline"]
resolver = "2"
build = "build.rs"



[dependencies]
eframe = "0.31.1"
# egui_keyboard = { path="../egui_keyboard" }
human_bytes = "0.4.3"
opener = "0.7.2"
egui-phosphor = "0.9.0"
flume = "0.11.0"
system-interface = "0.27.2"
# network-interface = "2.0.0"

whoami = "1.5.2"
directories = "5.0.1"
# robius-directories = "5.0"
chrono = "0.4.38"
timediff = "0.2.3"

enumn = "0.1.14"
crc = "3.2.1"
range_rover = "0.1.4"

notify-rust = "4.11.7"
rodio = { version = "0.20.1", default-features = false }

log = { version = "0.4", features = ["std"] }


[target.'cfg(not(target_os = "android"))'.dependencies]
env_logger = "0.11.5"
rfd = "0.15"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = "abort"
strip = "debuginfo"

[package.metadata.bundle]
name = "Roomor"
identifier = "com.p4ymak.roomor"
icon = ["icon/128x128.png"]
version = "0.4.4"
short_description = "Minimalistic offline chat over local network."
long_description = "Minimalistic offline chat with files transmission over local network."
deb_depends = ["libgl1-mesa-glx", "libsdl2-2.0-0 (>= 2.0.5)"]
osx_frameworks = ["SDL2"]

[target.'cfg(windows)'.build-dependencies]
windows_exe_info = "0.4"

[lib]
name="main"
path="src/lib.rs"
crate-type=["cdylib"]

[target.'cfg(target_os = "android")'.dependencies.android_logger]
version = "0.14"
default-features = false

[target.'cfg(target_os = "android")'.dependencies.eframe]
version = "0.30.0"
default-features = false
features = [
    "accesskit",
    "glow",
    "android-game-activity",
    "default_fonts",
]


[target.'cfg(target_os = "android")'.dependencies.egui-winit]
version = "0.30.0"
default-features = false
features = [
    "clipboard",
    "links",
    "bytemuck"
]

[target.'cfg(target_os = "android")'.dependencies.ndk]
version = "0.9.0"
features = [ "api-level-31" ]




